...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_playlists"
        android:text="@string/playlists"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@id/button_songs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
...
